fix h2 in memory

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
 spring.profiles.active=development
-
-spring.datasource.url=jdbc:h2:mem:testdb
-
+spring.datasource.url=jdbc:h2:mem:07b1af7f-7014-4cf8-be0d-4fba35f1d245
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
-
-
-
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
